# bitcoin-rl-trading

./: .env.example  .gitignore  CITATION.cff  README.md  evaluate.py  pyproject.toml  run_paper.py  train.py
.github/workflows/: refresh.yml
agents/: __init__.py  baselines.py  rl_agent.py
configs/: default.yaml
data/: __init__.py  fetch_price.py  fetch_sentiment.py  refresh.py
data/cache/: sample_headlines.csv
env/: __init__.py  bitcoin_env.py
features/: __init__.py  pipeline.py  sentiment.py  technical.py
scripts/: update_readme.py
tests/: test_env.py  test_features.py
