[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bitcoin-rl-trading"
version = "0.1.0"
description = "Bitcoin RL trading agent with FinBERT sentiment — paper replication + modernization"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "finrl>=0.3.6",
    "transformers>=4.40",
    "torch>=2.2",
    "scipy>=1.12",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "nltk>=3.8",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "python-binance>=1.0.19",
    "yfinance>=0.2.38",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "features*", "env*", "agents*"]
